flux-snapshot/2023-04-20-21-26-46-exit101
    Updating crates.io index
    Checking sorting v0.1.0 (/Users/cole/scratch/flux/flux-demos/sorting)
error[E0658]: custom inner attributes are unstable
 --> src/insertion_sort.rs:2:4
  |
2 | #![flux::defs {
  |    ^^^^^^^^^^
  |
  = note: see issue #54726 <https://github.com/rust-lang/rust/issues/54726> for more information
  = help: add `#![feature(custom_inner_attributes)]` to the crate attributes to enable

warning: crate-level attribute should be in the root module
 --> src/insertion_sort.rs:1:1
  |
1 | #![feature(custom_inner_attributes)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_attributes)]` on by default

For more information about this error, try `rustc --explain E0658`.
warning: `sorting` (bin "sorting") generated 1 warning
error: could not compile `sorting` (bin "sorting") due to previous error; 1 warning emitted
